recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:13: error: not found: value squar
		squar()
                ^